Bug 11200 - waf doesn't detect newer systemd libraries cause pkg-config handling non-working
Summary: waf doesn't detect newer systemd libraries cause pkg-config handling non-working
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Build (show other bugs)
Version: 4.2.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
: 10672 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-07 15:21 UTC by Andreas Schneider
Modified: 2016-02-12 00:08 UTC (History)
3 users (show)

See Also:


Attachments
patch for 4.2 (9.10 KB, patch)
2015-04-09 12:36 UTC, Andreas Schneider
ab: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2015-04-07 15:21:13 UTC
waf doesn't detect newer systemd libraries cause detecting a library with pkg-config doesn't work at all ...
Comment 1 Andreas Schneider 2015-04-09 12:36:50 UTC
Created attachment 10941 [details]
patch for 4.2
Comment 2 Alexander Bokovoy 2015-04-09 14:35:19 UTC
Comment on attachment 10941 [details]
patch for 4.2

Works on Fedora 22 and rawhide.
Comment 3 Andreas Schneider 2015-04-09 14:44:00 UTC
Karolin, please add the patch to 4.2. Thanks
Comment 4 Karolin Seeger 2015-04-19 19:20:47 UTC
Pushed to autobuild-v4-2-test.
Comment 5 Karolin Seeger 2015-04-20 19:40:47 UTC
(In reply to Karolin Seeger from comment #4)
Pushed to v4-2-test.
Closing out bug report.

Thanks!
Comment 6 Andrew Bartlett 2016-02-12 00:08:44 UTC
*** Bug 10672 has been marked as a duplicate of this bug. ***