lib/util/debug.c
@@ -102,7 +102,7 @@ static struct {
 	.fd = 2 /* stderr by default */
 };
 
-#if defined(WITH_SYSLOG) || defined(HAVE_SYSTEMD_JOURNAL)
+#if defined(WITH_SYSLOG) || defined(HAVE_LIBSYSTEMD_JOURNAL)
 static int debug_level_to_priority(int level)
 {
 	/*
@@ -174,7 +174,7 @@ static void debug_syslog_log(int msg_level,
 }
 #endif /* WITH_SYSLOG */
 
-#ifdef HAVE_SYSTEMD_JOURNAL
+#ifdef HAVE_LIBSYSTEMD_JOURNAL
 #include <systemd/sd-journal.h>
 static void debug_systemd_log(int msg_level,
 			      const char *msg, const char *msg_no_nl)
@@ -246,7 +246,7 @@ static struct debug_backend {
 	},
 #endif
 
-#ifdef HAVE_SYSTEMD_JOURNAL
+#ifdef HAVE_LIBSYSTEMD_JOURNAL
 	{
 		.name = "systemd",
 		.log = debug_systemd_log,
